--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -8,11 +8,10 @@
 {{ $jquery := resources.Get "scripts/jquery.js" }}
 {{ $popper := resources.Get "scripts/popper.js" }}
 {{ $bootstrap := resources.Get "scripts/bootstrap.js" }}
-{{ $fauna := resources.Get "scripts/fauna.js" | js.Build }}
 {{ $misc := resources.Get "scripts/misc.js" }}
-{{ $mainJS := slice $jquery $popper $bootstrap $fauna $misc | resources.Concat "main.js" }}
+{{ $mainJS := slice $jquery $popper $bootstrap $misc | resources.Concat "main.js" }}
 {{ with or (getenv "PRODUCTION") (getenv "PREVIEW") }}
-  {{ $mainJS = $mainJS | minify | fingerprint }}
+{{ $mainJS = $mainJS | minify | fingerprint }}
 {{ end }}
 <script src="{{ $mainJS.RelPermalink }}" integrity="{{ $mainJS.Data.Integrity }}" defer></script>
 
